# mastering-ai-observability-workshop

./: .env.example  .gitignore  Makefile  README.md  SUPPORT_WORKFLOW_ISSUE_FACET.md  WORKSHOP.md  pyproject.toml
.agents/skills/agent-auto-improvement/: SKILL.md
data/: seed.json
evals/: __init__.py  braintrust_functions.py  cases.jsonl  eval_support_agent.py  scorers.py
pipelines/: __init__.py  trace_to_eval_drafts.py
scripts/: chat.py  check_ready.py  prepare_trace_bundle.py  run_chat_ui.py  run_production_sim.py  seed_db.py  smoke_tools.py
src/aiewf_support/: __init__.py  agent.py  config.py  db.py  tools.py  tracing.py
src/aiewf_support/web/: __init__.py  app.py
src/aiewf_support/web/static/: app.js  index.html  styles.css
tests/: test_eval_cases.py  test_gateway_config.py  test_prepare_trace_bundle.py  test_scorers.py  test_tools.py  test_trace_to_eval_drafts.py  test_web_app.py
