[project]
name = "aiewf-support-flywheel"
version = "0.1.0"
description = "AI Engineer World's Fair workshop: trace-backed agent improvement flywheel."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "alive-progress>=3.2",
  "braintrust>=0.2.0",
  "openai-agents<0.14.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "starlette>=1.3.0",
  "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".uv-cache", ".workshop_private"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402"]
